@@ -63,7 +63,6 @@ bootJar {
   "--add-opens", "java.base/java.nio=ALL-UNNAMED",
   "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
   "--add-opens", "java.management/sun.management=ALL-UNNAMED",
-  "--add-opens", "jdk.management/com.ibm.lang.management.internal=ALL-UNNAMED",
   "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
 }
 repositories {
